--- a/demo/conf.ini
+++ b/demo/conf.ini
@@ -13,7 +13,7 @@ stmphost=smtp.163.com
 #授权瞿
 pwd=GDDBQZRTBBWQHBCR
 #收件丿
-receive=dujianxiao7@163.com
+receive=['dujianxiao7@163.com']
 #邮件标题
 emailTitle=ems接口测试报告
 #邮件正文
