--- a/demo/conf.ini
+++ b/demo/conf.ini
@@ -1,8 +1,8 @@
 [section]
  
 #预置3个数据库
-DB1=pymysql.connect(database='openems',host='192.168.31.31', port=33060,user='root',password='SAnlG7tReb')
-DB2=pymssql.connect(host='127.0.0.1', user='sa', password='root', database='test',timeout=120, login_timeout=120, charset='utf8')
+DB1=pymysql.connect(database='djxTest',host='47.119.130.205', port=3306,user='root',password='SAnlG7tReb')
+DB2=pymssql.connect(host='127.0.0.1', user='sa', password='root', database='test',timeout=3, login_timeout=3, charset='utf8')
 DB3=cx_Oracle.connect('system','Root1234','127.0.0.1:1521/ORCL')
 
 #邮件相关
@@ -36,4 +36,5 @@ flightIP=https://flights.ctrip.com
 #moco
 mocoIP=http://127.0.0.1:5555
 
+hello=500
 
