--- a/demo/conf.ini
+++ b/demo/conf.ini
@@ -1,25 +1,33 @@
 [section]
  
 #预置3个数据库
-DB1=pymysql.connect(database='platform',host='192.168.10.106', port=3306,user='root',password='xldz123456')
+DB1=pymysql.connect(database='platform',host='121.196.44.99', port=3306,user='root',password='')
 DB2=pymssql.connect(host='127.0.0.1', user='sa', password='root', database='test',timeout=3, login_timeout=3, charset='utf8')
 DB3=cx_Oracle.connect('system','Root1234','127.0.0.1:1521/ORCL')
 
  
 #☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆以上部分必填，值可为空；以下部分根据实际需要填写。☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆#
+#去哪儿
+hotel=https://hotel.qunar.com
+dujia=https://dujia.qunar.com
+travel=https://travel.qunar.com
 
-#用户变量
-#账号
-username=djx@enesoon.org.cn
-password=C82701870B415B155798CBA05686C5C3
 
-IP=https://enesoon-saas-back-test.cn:8397
-#登录
-login=enesoon/login/v1.0/employees
+hello=500
+file=ems.xls
 
-hello=2000
 
-jenkinsFile=ems.xls
+
+
+
+
+
+
+
+
+
+
+
 
 
 
