--- a/demo/conf.ini
+++ b/demo/conf.ini
@@ -1,9 +1,10 @@
 [section]
  
+#变量名需要小写
 #预置3个数据库
-DB1=pymysql.connect(database='platform',host='121.196.44.99', port=3306,user='root',password='')
-DB2=pymssql.connect(host='127.0.0.1', user='sa', password='root', database='test',timeout=3, login_timeout=3, charset='utf8')
-DB3=cx_Oracle.connect('system','Root1234','127.0.0.1:1521/ORCL')
+db1=pymysql.connect(database='platform',host='121.196.44.99', port=3306,user='root',password='')
+db2=pymssql.connect(host='127.0.0.1', user='sa', password='root', database='test',timeout=3, login_timeout=3, charset='utf8')
+db3=cx_Oracle.connect('system','Root1234','127.0.0.1:1521/ORCL')
 #☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆以上部分必填，值可为空；以下部分根据实际需要填写。☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆#
 #去哪儿
 hotel=https://hotel.qunar.com
